--- a/Index.html
+++ b/Index.html
@@ -44,6 +44,14 @@
           <!-- //*****************************// -->
         </div>
       </div>
+      <!-- //*******************************// -->
+      <div class="overdelete-container">
+        <div class="overdelete-content">
+          <p class="deleteHeader">Are you sure you want to delete this task?</p>
+          <button type="submit" class="okbtn" id="okbtn">Okay</button>
+          <button type="submit" class="cancelbtn" id="cancelbtn">Cancel</button>
+        </div>
+      </div>
     </div>
     <script src="./script.js" type="module"></script>
   </body>
